# engram

./: .env.example  .gitignore  Jenkinsfile  Jenkinsfile.indexes  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 4kaxijms9afm_add_embedding_status.py  a3f8c2d1e9b7_fix_content_type_enum_lowercase.py  b5e2a7c3f1d9_add_meeting_content_type.py  c9d4e5f6a7b8_perf_hnsw_and_tsvector.py
client/: pyproject.toml
client/src/engram_client/: __init__.py  client.py  models.py
deploy/: Dockerfile  Dockerfile.gpu  README.md  ansible-build-indexes.yml  ansible-deploy.yml  docker-compose.yml  engram-app.container  engram-db.container  engram.container  engram.network  healthcheck.py
deploy/scripts/: backup-db.sh
scripts/: backfill_embeddings.py  init_db.sql
src/engram/: __init__.py  cli.py  config.py  repository.py
src/engram/api/: __init__.py  app.py  routes.py
src/engram/db/: __init__.py  connection.py  tables.py
src/engram/embedding/: __init__.py  chunker.py  embedder.py
src/engram/models/: __init__.py  content.py
tests/: __init__.py  conftest.py  test_chunker.py  test_config.py  test_imports.py  test_models.py
