[project]
name = "engram-client"
version = "0.1.0"
description = "Thin client library for Engram knowledge corpus service"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Minimal dependencies - no ML libraries!
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engram_client"]
